Add age to stash checks & refactoring

--- a/dash-core/src/main/resources/static/app/dash/dash.html
+++ b/dash-core/src/main/resources/static/app/dash/dash.html
@@ -1,4 +1,4 @@
-<div class="panel" ng-class="{true: 'alert-danger', false: 'alert-info'}[lastUpdate.state == 'red']">
+<div class="dash-main-container panel" ng-class="{true: 'alert-danger', false: 'alert-info'}[lastUpdate.state == 'red']">
 
     <div class="global-info" ng-class="{true: 'alert-danger'}[lastUpdate.state == 'red']">
         Last update: {{infos.lastUpdateTime | date:'medium' }}
