--- a/dash-core/src/main/resources/static/app/dash/group/check/check.html
+++ b/dash-core/src/main/resources/static/app/dash/group/check/check.html
@@ -28,9 +28,9 @@
         <blockquote class="comment"
                     ng-repeat="comment in comments | byCheckResultIdentifier:check.checkResultIdentifier">
             {{ comment.comment }}
-            <button class="btn btn-danger"
+            <button class="close"
                     ng-click="deleteComment(comment.commentIdentifier)">
-                <span class="glyphicon glyphicon-minus"></span>
+                <span aria-hidden="true">&times;</span>
             </button>
         </blockquote>
         <div class="comments-form form-inline">
