fix adding and deleting comments
it only worked in some cases if the interval hit in the right moment
(sometimes you added a comment and it didn't show up, sometimes you deleted
a comment and it wasnt deleted)

--- a/dash-core/src/main/resources/static/app/dash/group/check/check.html
+++ b/dash-core/src/main/resources/static/app/dash/group/check/check.html
@@ -26,10 +26,9 @@
 
     <div ng-show="check.checkResultIdentifier">
         <blockquote class="comment"
-                    ng-repeat="comment in comments | byCheckResultIdentifier:check.checkResultIdentifier">
+                    ng-repeat="comment in commentsContainer.comments | byCheckResultIdentifier:check.checkResultIdentifier">
             {{ comment.comment }}
-            <button class="close"
-                    ng-click="deleteComment(comment.commentIdentifier)">
+            <button class="close" ng-click="deleteComment(comment)">
                 <span aria-hidden="true">&times;</span>
             </button>
         </blockquote>
