hue config now contains a URL instead of ip address
we want to use https to communicate with the hue bridge to get rid of
browser alerts and always having to tick "load insecure scripts"

--- a/dash-core/src/main/resources/static/app/dash/options/options.html
+++ b/dash-core/src/main/resources/static/app/dash/options/options.html
@@ -9,7 +9,7 @@
     <label class="team-label">
         <input type="checkbox" ng-model="config.hue.enabled"/> hue
         <div ng-show="config.hue.enabled">
-            ip <input type="text" size="12" ng-model="config.hue.ip">
+            URL <input type="text" size="12" ng-model="config.hue.url">
             key <input type="text" size="12" ng-model="config.hue.key">
             light# <input type="text" size="5" ng-model="config.hue.light">
         </div>
